--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -585,6 +585,10 @@ ol.breadcrumb {
     color: $white;
     border-color: $white;
   }
+  img.social {
+	  filter: invert(100%);
+    opacity: 1;
+  }
 }
 
 .paragraph--type--xeno-hero__image {
