--- a/css/style.css
+++ b/css/style.css
@@ -6724,6 +6724,13 @@ ol.breadcrumb {
   text-align: center;
   padding-bottom: 40px; }
 
+.paragraph__column p.glyphicon {
+  text-align: center;
+  margin-bottom: -1em; }
+  .paragraph__column p.glyphicon .glyphicon {
+    font-size: 4em;
+    margin: .5em 0 0 0; }
+
 .paragraph__column img.social {
   width: 3em;
   opacity: 0.65;
