--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -564,6 +564,14 @@ ol.breadcrumb {
     text-align: center;
     padding-bottom: 40px;
   }
+  p.glyphicon {
+    text-align: center;
+    margin-bottom: -1em;
+    .glyphicon {
+      font-size: 4em;
+      margin: .5em 0 0 0;
+    }
+  }
   img.social {
     width: 3em;
     opacity: 0.65;
