--- a/css/style.css
+++ b/css/style.css
@@ -6724,12 +6724,10 @@ ol.breadcrumb {
   text-align: center;
   padding-bottom: 40px; }
 
-.paragraph__column p.glyphicon {
+.paragraph__column p.infographic {
   text-align: center;
-  margin-bottom: -1em; }
-  .paragraph__column p.glyphicon .glyphicon {
-    font-size: 4em;
-    margin: .5em 0 0 0; }
+  font-size: 4em;
+  margin: .375em 0 -.5em 0; }
 
 .paragraph__column img.social {
   width: 3em;
