--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -564,13 +564,10 @@ ol.breadcrumb {
     text-align: center;
     padding-bottom: 40px;
   }
-  p.glyphicon {
+  p.infographic {
     text-align: center;
-    margin-bottom: -1em;
-    .glyphicon {
-      font-size: 4em;
-      margin: .5em 0 0 0;
-    }
+    font-size: 4em;
+    margin: .375em 0 -.5em 0;
   }
   img.social {
     width: 3em;
