Update template link paths to relative for demo purposes

--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -83,8 +83,8 @@
     </div>
     <div class="collapse navbar-collapse" id="bs-primary-navbar-collapse-1" tabindex="1">
         <ul class="nav navbar-nav">
-            <li><a href="https://studentaffairs.vancouver.wsu.edu/admissions">Admissions</a></li>
-            <li><a href="https://studentaffairs.vancouver.wsu.edu/admissions/degrees-majors-and-programs">Degrees</a></li>
+            <li><a href="/">Admissions</a></li>
+            <li><a href="/admissions/degrees-majors-and-programs">Degrees</a></li>
             <li><a href="https://studentaffairs.vancouver.wsu.edu/student-affairs/resources-current-students">Students</a></li>
             <li><a href="https://admin.vancouver.wsu.edu/research">Research</a></li>
             <li><a href="https://admin.vancouver.wsu.edu/development-and-alumni-relations">Alumni</a></li>
@@ -123,7 +123,7 @@
     <a href="https://www.vancouver.wsu.edu"><img class="primary-logo" src="http://8dev.vancouver.wsu.edu/sites/all/themes/bootstrap_sass_wsuv/images/wsu-vancouver-primary-logo-rgb.svg" alt="WSU Vancouver home page"></a>
   </div>
   <div class="col-sm-6 col-md-6">
-    <a class="apply-button" href="https://studentaffairs.vancouver.wsu.edu/admissions/apply">Apply now</a>
+    <a class="apply-button" href="/admissions/apply">Apply now</a>
   </div>
 </div>
 
@@ -156,8 +156,8 @@
   <div class="col-md-3">
   		<ul>
  			<li class="sitemap-section">Future Students</li>
-			<li><a href="https://studentaffairs.vancouver.wsu.edu/admissions">Admissions</a></li>
-      <li><a href="https://studentaffairs.vancouver.wsu.edu/majors-and-programs">Majors and Programs</a></li>
+			<li><a href="/">Admissions</a></li>
+      <li><a href="/admissions/degrees-majors-and-programs">Majors and Programs</a></li>
 			<li><a href="https://studentaffairs.vancouver.wsu.edu/financial-aid">Student Financial Services</a></li>
 			<li>&nbsp;</li>
 			<li class="sitemap-section">Current Students</li>
