--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -134,6 +134,11 @@ hr {
   }
 } /* Credit: https://work.smarchal.com/twbscolor/ */
 
+#navbar {
+  background-color: $white;
+  border: none;
+}
+
 img.horizontal-logo {
   display: none;
 }
@@ -678,6 +683,54 @@ div.region.region-content > ol {
 
 #edit-submit--2 {
   margin-left: 0;
+}
+
+/* Main content - Google Custom Search results */
+
+#___gcse_0 > div {
+  font-family: $font-family-sans-serif;
+}
+
+#gsc-iw-id1 {
+  height: 50px;
+  font-size: 2em;
+  margin-left: -28px;
+}
+
+#___gcse_0 > div > div > form {
+  margin-left: 1em;
+}
+
+.gsc-search-button > button {
+  background-color: $brand-primary;
+  width: 52px;
+  height: 52px;
+  padding: .5em;
+  margin-top: -1px;
+}
+
+#gs_cb50 {
+  color: $dark-gray;
+  padding: .5em;
+}
+
+.gsc-webResult {
+  margin: 1em 0 1em 0;
+  .gsc-result:hover {
+  margin-left: -1px;
+  margin-bottom: 1px;
+  }
+}
+
+.gsc-url-top {
+  font-size: 1.25em;
+  font-style: italic;
+}
+
+.gs-bidi-start-align.gs-snippet {
+  font-family: $font-family-sans-serif;
+  font-size: 1.25em;
+  margin-left: -1em;
 }
 
 /* Secondary block region */
