--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -699,6 +699,9 @@ div.region.region-content > ol {
 
 #___gcse_0 > div > div > form {
   margin-left: 1em;
+  input {
+    box-shadow: 0;
+  }
 }
 
 .gsc-search-button > button {
@@ -715,11 +718,14 @@ div.region.region-content > ol {
 }
 
 .gsc-webResult {
-  margin: 1em 0 1em 0;
   .gsc-result:hover {
   margin-left: -1px;
   margin-bottom: 1px;
   }
+}
+
+.gsc-thumbnail-inside {
+  margin-top: 2em;
 }
 
 .gsc-url-top {
