Add page margins to empty view placeholder

--- a/css/style.css
+++ b/css/style.css
@@ -6646,6 +6646,7 @@ body > nav > div.navbar-header > button {
 ul.tabs--primary,
 h1.page-header,
 .region-content form,
+.views-element-container,
 h2, h3, h4, h5, p, table, th, td, tr, hr, blockquote {
   margin-right: 25px;
   margin-left: 25px; }
@@ -6830,8 +6831,6 @@ div.region.region-content > ol {
 
 #___gcse_0 > div > div > form {
   margin-left: 1em; }
-  #___gcse_0 > div > div > form input {
-    box-shadow: 0; }
 
 .gsc-search-button > button {
   background-color: #981e32;
