--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -495,6 +495,7 @@ li.node-readmore,
   margin-left: 18px;
 }
 
+.views-row,
 .field--name-body {
   margin-bottom: 1em;
 }
@@ -515,6 +516,21 @@ li.node-readmore,
 .field--name-field-event-website {
   color: $dark-gray;
   margin-bottom: 1em;
+}
+
+.region-sidebar-second .block-views {
+  h2.block-title {
+    margin-left: 0;
+  }
+  .field-content a {
+    border-bottom: none;
+    text-decoration: underline;
+    color: $brand-primary;
+  }
+  .field-content a:hover {
+    padding-left: 1px;
+    color: $text-color;
+  }
 }
 
 .region-content form {
