--- a/css/style.css
+++ b/css/style.css
@@ -6707,7 +6707,8 @@ li.node-readmore,
   border-radius: 4px;
   border-color: #981e32;
   padding: 10px 20px 10px 20px;
-  text-decoration: none; }
+  text-decoration: none;
+  margin-right: 25px; }
 
 .pager li > a:hover,
 .pager li > a:focus {
