--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -541,6 +541,7 @@ li.node-readmore,
   border-color: $brand-primary;
   padding: 10px 20px 10px 20px;
   text-decoration: none;
+  margin-right: 25px;
 }
 
 .pager li > a:hover,
