Fix margins on feeds import UI

--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -516,6 +516,7 @@ li.node-readmore,
 .field--name-field-event-parking,
 .field--name-field-event-sponsor,
 .field--name-field-event-website,
+.feeds_feed__content,
 .region-content form {
   margin-right: 25px;
   margin-left: 25px;
