--- a/css/style.css
+++ b/css/style.css
@@ -6686,6 +6686,7 @@ li.node-readmore,
 .field--name-field-event-parking,
 .field--name-field-event-sponsor,
 .field--name-field-event-website,
+.feeds_feed__content,
 .region-content form {
   margin-right: 25px;
   margin-left: 25px; }
