--- a/css/style.css
+++ b/css/style.css
@@ -6668,10 +6668,11 @@ body > nav > div.navbar-header > button {
 /* Prevent tables from invading secondary block region on wide layouts */
 h1.page-header,
 h2, h3, h4, h5, p, table, th, td, tr, hr, blockquote,
-#user-login-form,
 ul.local-actions,
 ul.tabs--primary,
 li.node-readmore,
+#user-login-form,
+#block-bootstrap-sass-wsuv-help,
 .feed-icons,
 .field--name-field-event-contact,
 .field--name-field-event-cost,
@@ -6681,7 +6682,9 @@ li.node-readmore,
 .field--name-field-event-sponsor,
 .field--name-field-event-website,
 .feeds_feed__content,
-.region-content form {
+.region-content form,
+.webform-confirmation__back,
+.webform-confirmation__message {
   margin-right: 25px;
   margin-left: 25px; }
 
