Minor: update template links for dev sites

--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -83,8 +83,8 @@
     </div>
     <div class="collapse navbar-collapse" id="bs-primary-navbar-collapse-1" tabindex="1">
         <ul class="nav navbar-nav">
-            <li><a href="/">Admissions</a></li>
-            <li><a href="/admissions/degrees-majors-and-programs">Degrees</a></li>
+            <li><a href="http://8dev.vancouver.wsu.edu">Admissions</a></li>
+            <li><a href="http://8dev.vancouver.wsu.edu/admissions/degrees-majors-and-programs">Degrees</a></li>
             <li><a href="https://studentaffairs.vancouver.wsu.edu/student-affairs/resources-current-students">Students</a></li>
             <li><a href="https://admin.vancouver.wsu.edu/research">Research</a></li>
             <li><a href="https://admin.vancouver.wsu.edu/development-and-alumni-relations">Alumni</a></li>
@@ -95,11 +95,11 @@
                   <li><a href="https://studentaffairs.vancouver.wsu.edu/student-affairs/bookie-student-bookstore">Bookstore</a></li>
                   <li><a href="http://learn.wsu.edu/">Blackboard</a></li>
                   <li><a href="http://directory.vancouver.wsu.edu">Directory</a></li>
+                  <li><a href="https://outlook.office365.com/owa/wsu.edu/">Email</a></li>
                   <li><a href="https://library.vancouver.wsu.edu">Library</a></li>
                   <li><a href="https://my.wsu.edu/">myWSU</a></li>
                   <li><a href="http://office365.wsu.edu/">Office 365</a></li>
                   <li><a href="https://admin.vancouver.wsu.edu/information-technology">Tech Support</a></li>
-                  <li><a href="https://outlook.office365.com/owa/wsu.edu/">Webmail</a></li>
                 </ul>
             </li>
         </ul>
@@ -148,7 +148,7 @@
 			<li><a href="https://admin.vancouver.wsu.edu">Administration</a></li>
 			<li><a href="https://hd.vancouver.wsu.edu/child-development">Child Development Program</a></li>
 			<li><a href="https://admin.vancouver.wsu.edu/human-resources/employment">Employment</a></li>
-			<li><a href="https://events.vancouver.wsu.edu">Events Calendar</a></li>
+			<li><a href="http://events8dev.vancouver.wsu.edu">Events Calendar</a></li>
 			<li><a href="https://admin.vancouver.wsu.edu/parking/parking-services">Parking Services</a></li>
       <li><a href="https://wsu.edu/about/statewide/">WSU Locations</a></li>
     	</ul>
