Remove alternate Search link in header

--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -104,15 +104,14 @@
             </li>
         </ul>
         <div class="col-sm-3 col-md-3 pull-right">
-            <!-- <form action="/search/node" method="get" class="navbar-form" role="search">
+            <form action="/search/node" method="get" class="navbar-form" role="search">
                 <div class="input-group" tabindex="2">
                     <input data-drupal-selector="edit-keys" class="form-search form-control" placeholder="Search" type="search" id="edit-keys" name="keys" value="">
                     <div class="input-group-btn" aria-hidden="true">
                         <button class="btn btn-default" type="submit" value="Search"><span class="glyphicon glyphicon-search"></span></button>
                     </div>
                 </div>
-            </form> -->
-            <p class="google-search"><a href="/search">Search</a> <span class="glyphicon glyphicon-search"></span></p>
+            </form>
         </div>
     </div>
 </nav>
